Corrected some phrases

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
              <br/>Unix OS distributions</button>
             <button class="Uns_btn" onclick="window.location.href = 'src/html/uns-hardware.html';">
              <img src="src/img/comperasons.jpg" alt="Unix hardware" height="150" width="180px"/>
-             <br/>Hardware for Unix</button>
+             <br/>Unix hardware</button>
             <button class="Uns_btn" onclick="window.location.href = 'src/html/uns_bashexamples.html';">
             <img src="src/img/codeExamples.jpg" alt="Unix bash code" height="150" width="180px"/>
             <br/>Bash coding archives</button>
