Corrected some phrases

--- a/src/html/uns-hardware.html
+++ b/src/html/uns-hardware.html
@@ -31,7 +31,7 @@
 
     <div class="Uns-content-form">
         <div class="Uns-ContentHeading-form">
-            <h1 class="Uns-ContentHeading">Hardware for Unix</h1>
+            <h1 class="Uns-ContentHeading">Unix Hardware</h1>
         </div>
         <div class="Uns-SubContent-formV2">
             <h2 class="Uns-ContentHeadingV2">Disk drive types</h2>
