--- a/src/html/uns-osdistros.html
+++ b/src/html/uns-osdistros.html
@@ -25,7 +25,7 @@
             <button class="Uns_btn1" onclick="window.location.href='../../index.html';">Main Page</button>
             <button class="Uns_btn1" onclick="window.location.href='uns-commands.html';">Command list</button>
             <button class="Uns_btn1" onclick="window.location.href='uns-osdistros.html';">Unix OS distributions</button>
-            <button class="Uns_btn1" onclick="window.location.href = 'uns-hardware.html';">Unix OS distro hardware</button>
+            <button class="Uns_btn1" onclick="window.location.href = 'uns-hardware.html';">Unix hardware</button>
             <button class="Uns_btn1" onclick="window.location.href = 'uns_bashexamples.html';">Bash coding archives</button>
         </div>
     </div>
